[package]
name = "wsproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
futures-util = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tokio-test = "0.4.4"
tokio-tungstenite = "0.27.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
missing_const_for_fn = "allow"
todo = "warn"

cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
option_if_let_else = "allow"
