[package]
name = "websocket-relay"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Christopher Allen Ogden"]
description = "A WebSocket-to-TCP relay server with TLS support and domain-based routing"
repository = "https://github.com/Sydius/websocket-relay.git"
keywords = ["websocket", "relay", "tcp", "tls", "networking"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26.0"
rustls = "0.23.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0.98"
ipnet = "2.10.1"

[dev-dependencies]
tokio-test = "0.4.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
missing_const_for_fn = "allow"
todo = "warn"

cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
option_if_let_else = "allow"
